Pequeños arreglos
Cambio de la conexion de la base de datos y adicion de un controlador
