# api/swagger/swagger.yaml
@@ -18,6 +18,40 @@ consumes:
 produces:
   - application/json
 paths:
+  /organizacion:
+    # our controller name
+    x-swagger-router-controller: organizacion
+    get:
+      description: Obtener la lista de usuarios
+      # define the type of response for Success "200" and Error
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetUsersListResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Añadir un nuevo usuario
+      # movie info to be stored
+      parameters:
+        - name: name
+          description: Atributos usuario
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/User"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /users:
     # our controller name
     x-swagger-router-controller: users
