# app.js
@@ -1,24 +1,7 @@
 'use strict';
-
-// const bodyParser = require('body-parser');
-// const path = require('path');
-
-// const mongoose = require('mongoose');
-
-// const Schema = mongoose.Schema;
-// const model = require('./api/models/organizacion');
-
-
-// var organizacionSchema = new Schema(model);
-// var Organizacion = mongoose.model("Organizacion",organizacionSchema);
-
-
 var SwaggerExpress = require('swagger-express-mw');
 var app = require('express')();
 module.exports = app; // for testing
-
-// app.use(bodyParser.urlencoded({extended: false }));
-// app.use(bodyParser.json());
 
 var config = {
   appRoot: __dirname // required config
@@ -34,15 +17,26 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
   app.listen(port);
 
   if (swaggerExpress.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
+    console.log('try this:\ncurl http://127.0.0.1/:' + port + '/hello?name=Scott');
   }
   if (swaggerExpress.runner.swagger.paths['/users']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/users?name=Scott');
+    console.log('try this:\ncurl http://127.0.0.1/:' + port + '/users?name=Scott');
   }
 });
 
-// // ruta de la pagina HOME
-// app.get('/', (req, res) => res.send('Hello World!'));
+var ModelOrganizacion = require('./api/models/Organizacion');
 
-// // Coneccion con mongoose
-// mongoose.connect('mongodb://localhost/rafiki', { useMongoClient: true })
+app.get('/get', (req, res) => {
+  ModelOrganizacion.find({}, (err, organizacion) => {
+      console.log(organizacion.length);
+      if(err) return res.status(500).send({message: 'Error al realizar peticion: ${err}'});
+      if(!organizacion) return res.status(400).send({message: 'No existe ninguna organizacion'});
+
+      res.status(200).send({organizacion});
+  });
+});
+
+
+app.get('/', (req, res) => {
+  res.send('Hola');
+});
